--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -1,5 +1,6 @@
 html, body {
 	height: 100%;
+	font-family: Arial, Verdana;
 }
 
 .backlog-category {
@@ -59,5 +60,5 @@ html, body {
 }
 
 .contents {
-	height: 100%;
+	min-height: 200px;
 }
