--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -7,7 +7,7 @@ html, body {
 	margin-top: 5px;
 }
 
-.k-container {
+.column {
 	border: 1px solid black;
 	width: 100%;
 	height: 100%;
@@ -15,7 +15,7 @@ html, body {
 	flex-direction: column;
 }
 
-.k-line {
+.line {
 	border: 1px solid black;
 	width: 100%;
 	height: 100%;
@@ -40,7 +40,7 @@ html, body {
 	writing-mode: tb-rl;
 }
 
-.k-list {
+.list {
 	display: flex;
 	height: 100%;
 	width: 100%;
