--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -3,62 +3,24 @@ html, body {
 	font-family: Arial, Verdana;
 }
 
-.backlog-category {
-	margin-top: 5px;
-}
-
-.column {
-	border: 1px solid black;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-.line {
-	border: 1px solid black;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: row;
-}
-
-.column-title {
-	display: block;
-	width: 100%;
-	background-color: #EEEEEE;
-	margin: 0;
-	text-align: center;
-	writing-mode: lr-tb;
-}
-
-.line-title {
-	display: block;
-	background-color: #EEEEEE;
-	margin: 0;
-	text-align: center;
-	writing-mode: tb-rl;
-}
-
-.list {
-	display: flex;
-	height: 100%;
-	width: 100%;
-}
-
-.horizontal {
-	flex-direction: row;
-}
-
-.vertical {
-	flex-direction: column;
-}
 
 .task {
 	position: absolute;
-	max-width: 150px;
+}
+
+.task-content {
+	width: 200px;
 	background-color: #999;
 	border: 1px solid #666;
+}
+
+.innerTask {
+	position: initial;
+}
+
+.task h2 {
+	font-size: 14px;
+	margin: 10px;
 }
 
 .kanban {
@@ -71,7 +33,6 @@ html, body {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	background-color: #FF44EE;
 	top: 0;
 	left: 0;
 }
