--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -137,7 +137,7 @@ html, body {
 	width: 1000px;
 	height: 350px;
 	left: 1000px;
-	border-bottom: solid 1px #444;
+	border-bottom: dotted 1px #444;
 }
 
 #front {
@@ -145,7 +145,7 @@ html, body {
 	width: 1000px;
 	height: 250px;
 	left: 1000px;
-	border-bottom: solid 1px #444;
+	border-bottom: dotted 1px #444;
 }
 
 #cms {
@@ -153,7 +153,7 @@ html, body {
 	width: 1000px;
 	height: 200px;
 	left: 1000px;
-	border-bottom: solid 1px #444;
+	border-bottom: dotted 1px #444;
 }
 
 #other {
