--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -174,6 +174,7 @@ html, body {
     margin-top: -200px;
     width: 600px;
     margin-left: -300px;
+    padding: 5px;
 }
 
 .popup-background {
@@ -185,4 +186,14 @@ html, body {
 	background-color: #333333;
 	z-index: 99;
 	opacity: 0.5;
+}
+
+.edit-task label {
+	display: block;
+	margin: 5px 0px;
+}
+
+.edit-task textarea {
+	width: 400px;
+	height: 100px;
 }
