--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -51,7 +51,7 @@ h3 {
 	width: 100%;
 	top: 0;
 	left: 0;
-	border: 1px solid #666;
+	border: 4px solid #5F9EA0;
 }
 
 .selected {
@@ -67,84 +67,15 @@ h3 {
 }
 
 .zone h2 {
-	font-size: 16px;
-	margin: ;
+	font-size: 20px;
+	color: #5F9EA0;
 	text-align: center;
 	text-transform: uppercase;
 }
 
-#backlog {
-	left: 0px;
-	border-right: dashed 1px #444;
-	width: 600px;
-	height: 100%;
-}
-
-#bug {
-	width: 200px;
-	height: 100%;
-	left: 600px;
-	border-right: dashed 1px #444;
-}
-
-#technical {
-	width: 200px;
-	height: 100%;
-	left: 800px;
-	border-right: solid 3px #444;
-}
-
-#todo {
-	width: 400px;
-	height: 100%;
-	left: 1000px;
-	border-right: solid 2px #444;
-}
-
-#development {
-	width: 600px;
-	height: 100%;
-	left: 1400px;
-	border-right: solid 2px #444;
-}
-
-#test {
-	width: 200px;
-	height: 800px;
-	left: 1800px;
-	border-left: dotted 1px #444;
-}
-
-#done {
-	width: 400px;
-	height: 100%;
-	left: 2000px;
-	border-right: solid 3px #444;
-}
-
-#qualification {
-	width: 200px;
-	height: 100%;
-	left: 2400px;
-	border-right: solid 1px #444;
-}
-
-#preproduction {
-	width: 200px;
-	height: 100%;
-	left: 2600px;
-	border-right: solid 1px #444;
-}
-
-#production {
-	width: 200px;
-	height: 100%;
-	left: 2800px;
-}
-
 .line {
-  	display: flex; /* contexte sur le parent */
-	flex-direction: column; /* direction d'affichage verticale */
+  	display: flex; 
+	flex-direction: column; 
 	justify-content: center;
 }
 
@@ -154,11 +85,80 @@ h3 {
     margin: 5px;
 }
 
+#backlog {
+	left: 0px;
+	border-right: dashed 2px #5F9EA0;
+	width: 600px;
+	height: 100%;
+}
+
+#bug {
+	width: 200px;
+	height: 100%;
+	left: 600px;
+	border-right: dashed 2px #5F9EA0;
+}
+
+#technical {
+	width: 200px;
+	height: 100%;
+	left: 800px;
+	border-right: solid 4px #5F9EA0;
+}
+
+#todo {
+	width: 400px;
+	height: 100%;
+	left: 1000px;
+	border-right: solid 3px #5F9EA0;
+}
+
+#development {
+	width: 600px;
+	height: 100%;
+	left: 1400px;
+	border-right: solid 3px #5F9EA0;
+}
+
+#test {
+	width: 200px;
+	height: 800px;
+	left: 1800px;
+	border-left: dotted 2px #5F9EA0;
+}
+
+#done {
+	width: 400px;
+	height: 100%;
+	left: 2000px;
+	border-right: solid 4px #5F9EA0;
+}
+
+#qualification {
+	width: 200px;
+	height: 100%;
+	left: 2400px;
+	border-right: solid 2px #5F9EA0;
+}
+
+#preproduction {
+	width: 200px;
+	height: 100%;
+	left: 2600px;
+	border-right: solid 2px #5F9EA0;
+}
+
+#production {
+	width: 200px;
+	height: 100%;
+	left: 2800px;
+}
+
 #back {
 	width: 1000px;
 	height: 350px;
 	left: 1000px;
-	border-bottom: dotted 1px #444;
+	border-bottom: dotted 2px #5F9EA0;
 }
 
 #front {
@@ -166,7 +166,7 @@ h3 {
 	width: 1000px;
 	height: 250px;
 	left: 1000px;
-	border-bottom: dotted 1px #444;
+	border-bottom: dotted 2px #5F9EA0;
 }
 
 #cms {
@@ -174,7 +174,7 @@ h3 {
 	width: 1000px;
 	height: 200px;
 	left: 1000px;
-	border-bottom: dotted 1px #444;
+	border-bottom: dotted 2px #5F9EA0;
 }
 
 #other {
