--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -31,6 +31,16 @@ h3 {
 	margin: 3px 10px;
 }
 
+.sticker {
+	width: 20px;
+	height: 20px;
+	background-color: #440044;
+	border: 1px solid #000;
+	position: absolute;
+	left: -20px;
+	top: 5px;
+}
+
 .kanban {
 	position: relative;
 	width: 3000px;
@@ -302,6 +312,7 @@ h3 {
 	height: 40px;
 	border: 4px solid #5F9EA0;
 	z-index: 50;
+	background-color: #FFF;
 	box-shadow: 2px 2px 4px 0px #444;
 }
 
