--- a/public/css/kanban.css
+++ b/public/css/kanban.css
@@ -13,7 +13,6 @@ html, body {
 	width: 150px;
 	background-color: #999;
 	border: 1px solid #666;
-	user-select: none;
 }
 
 .innerTask {
@@ -48,11 +47,11 @@ h3 {
 	border: 4px solid #5F9EA0;
 }
 
-.selected {
+.drag-over {
 	outline: 1px solid #F00;
 }
 
-.dragged {
+.dragging {
 	opacity: 0.5;
 }
 
